feat: 미리보기 수정

--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Oh In Seong - Portfolio" />
-    <title>Oh In Seong | Portfolio</title>
+    <meta name="description" content="사용자 경험을 중심으로 생각하는 안드로이드 개발자 오인성의 포트폴리오입니다." />
+    <title>Oh In Seong | Android Developer Portfolio</title>
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="오인성 | Android Developer Portfolio" />
+    <meta property="og:description" content="사용자 경험을 중심으로 생각하는 안드로이드 개발자 오인성의 포트폴리오입니다." />
+    <meta property="og:url" content="https://ois0886.github.io/Oh-In-Seong-Portfolio/" />
+    <meta property="og:image" content="https://ois0886.github.io/Oh-In-Seong-Portfolio/screenshot/profile.jpg" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="오인성 | Android Developer Portfolio" />
+    <meta name="twitter:description" content="사용자 경험을 중심으로 생각하는 안드로이드 개발자 오인성의 포트폴리오입니다." />
+    <meta name="twitter:image" content="https://ois0886.github.io/Oh-In-Seong-Portfolio/screenshot/profile.jpg" />
   </head>
   <body>
     <div id="root"></div>
